//
//  GitRepositoryListViewElementID.swift
//  iOSEngineerCodeCheck
//  
//  Created by Seigetsu on 2023/12/26
//  Copyright © 2023 YUMEMI Inc. All rights reserved.
//

import Foundation

/// UITestのために設定する accessibilityIdentifier をまとめたもの。
enum GitRepositoryListViewElementID {
    static let searchSettingBarButton = "Git Repository Search Setting Bar Button"
    static let searchBar = "Git Repository Search Bar"
    static let tableView = "Git Repository List Table"
    static let guidanceLabel = "Search Guidance Label"
}
