//
//  GitRepositoryDetailViewElementID.swift
//  iOSEngineerCodeCheck
//  
//  Created by Seigetsu on 2023/12/26
//  Copyright © 2023 YUMEMI Inc. All rights reserved.
//

import Foundation

/// UITestのために設定する accessibilityIdentifier をまとめたもの。
enum GitRepositoryDetailViewElementID {
    static let browseBarButton = "Git Repository Browse Bar Button"
    static let imageView = "Git Repository Image View"
    static let titleLabel = "Git Repository Title Label"
    static let languageLabel = "Git Repository Language Label"
    static let starsLabel = "Git Repository Stars Label"
    static let watchesLabel = "Git Repository Watches Label"
    static let forksLabel = "Git Repository Forks Label"
    static let issuesLabel = "Git Repository Issues Label"
}
