//
//  SearchSettingPopoverViewElementID.swift
//  iOSEngineerCodeCheck
//  
//  Created by Seigetsu on 2023/12/28
//  Copyright © 2023 YUMEMI Inc. All rights reserved.
//

import Foundation

/// UITestのために設定する accessibilityIdentifier をまとめたもの。
enum SearchSettingPopoverViewElementID {
    static let tableView = "Search Setting Table"
}
